k8s/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emma-birthday
  namespace: emma-birthday
spec:
  hostnames:
    - birthday.emma.romaine.life
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: envoy-gateway-system
    - group: gateway.networking.x-k8s.io
      kind: XListenerSet
      name: emma-birthday
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: emma-birthday
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
